# DeepFake

./: .gitattributes  README.md  data_processing.py  eer.py  predict.py  train.csv
FaceRecognitionHack/: val.csv
ML/: FaceRecognitionDataset.py  make_prediction.py  make_submission.py  requirements.txt  train.py
ML/data/: model_weights_epoch_3.pth
web/: .gitattributes
web/backend/: .gitignore  main.py  pyproject.toml
web/backend/core/: model.py
web/backend/core/weights/: model_final_weights_20.pth
web/backend/v1/: app.py
web/backend/v1/routers/: compare.py
web/frontend/: app.vue  nuxt.config.ts
web/frontend/public/: robots.txt  sitemap.xml
