[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "timm (>=1.0.15,<2.0.0)",
    "huggingface-hub (>=0.29.2,<0.30.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
